# sp100-rank

./: .gitignore  README.md  pyproject.toml
.github/workflows/: retrain.yml  score.yml
data/processed/: fold_ic_summary.csv  holdout_ic_rf.csv  portfolio_diagnostics.csv  selected_features.json  shap_ranks_rf.csv  shap_stability_rf.csv  tuned_hyperparameters.json
docs/: decisions.md
outputs/scores/: scores_2026-05-01.csv  scores_2026-05-04.csv  scores_2026-05-11.csv  scores_2026-05-18.csv  scores_2026-05-22.csv  scores_2026-06-01.csv  scores_2026-06-08.csv  scores_2026-06-15.csv  scores_2026-06-22.csv  scores_2026-06-29.csv
src/sp100rank/: __init__.py  config.py
src/sp100rank/data/: clean.py  ingest.py  universe.py
src/sp100rank/eval/: backtest.py  metrics.py  portfolio.py  regime_breakdown.py  regimes.py  walkforward.py
src/sp100rank/features/: build.py  labels.py  select.py  technical.py
src/sp100rank/interpret/: shap_stability.py
src/sp100rank/models/: registry.py  train.py  tune.py
src/sp100rank/pipeline/: retrain.py  score.py
tests/: conftest.py  test_features_no_lookahead.py  test_labels.py  test_walkforward.py
