[project]
name = "sp100rank"
version = "0.1.0"
description = "Cross-sectional rank prediction for S&P 100 equities via gradient-boosted models"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Malith J" },
]
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
    "yfinance>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]

packages = ["src/sp100rank"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
]

[tool.uv]
package = true
